PPC64 and s390 fail to build after JDK-8199712 (Flight Recorder)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • jfr
    • b15
    • ppc, s390x

        ppc64el:

        /home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp: In member function 'bool JfrGetCallTrace::get_topframe(void*, frame&)':
        /home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp:99:17: error: 'class JavaThread' has no member named 'pd_get_top_frame_for_profiling'; did you mean 'pd_get_top_frame_for_signal_handler'?
           if (!_thread->pd_get_top_frame_for_profiling(&topframe, ucontext, _in_java)) {
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        In file included from /home/shade/jdk-jdk/src/hotspot/share/jfr/recorder/checkpoint/jfrCheckpointManager.cpp:36:0:
        /home/shade/jdk-jdk/src/hotspot/share/jfr/utilities/jfrBigEndian.hpp:108:4: warning: #warning "Unconfigured platform" [-Wcpp]
           #warning "Unconfigured platform"
            ^~~~~~~
        lib/CompileJvm.gmk:149: recipe for target '/home/shade/jdk-jdk/build/linux-ppc64le-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrCallTrace.o' failed

              Assignee:
              Martin Doerr
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: