8203288: PPC64 and s390 fail to build after JDK-8199712 (Flight Recorder)

Reviewed-by: shade