src/hotspot/os_cpu/aix_ppc/thread_aix_ppc.cpp
@@ -40,6 +40,13 @@ frame JavaThread::pd_last_frame() {
   return frame(sp, pc);
 }
 
+bool JavaThread::pd_get_top_frame_for_profiling(frame* fr_addr, void* ucontext, bool isInJava) {
+  ucontext_t* uc = (ucontext_t*) ucontext;
+  *fr_addr = frame((intptr_t*)uc->uc_mcontext.jmp_context.gpr[1/*REG_SP*/],
+                   (address)uc->uc_mcontext.jmp_context.iar);
+  return true;
+}
+
 // Forte Analyzer AsyncGetCallTrace profiling support is not implemented on Aix/PPC.
 bool JavaThread::pd_get_top_frame_for_signal_handler(frame* fr_addr, void* ucontext, bool isInJava) {
   Unimplemented();
