src/hotspot/os_cpu/linux_s390/thread_linux_s390.cpp
@@ -41,6 +41,13 @@ frame JavaThread::pd_last_frame() {
   return frame(sp, pc);
 }
 
+bool JavaThread::pd_get_top_frame_for_profiling(frame* fr_addr, void* ucontext, bool isInJava) {
+  ucontext_t* uc = (ucontext_t*) ucontext;
+  *fr_addr = frame((intptr_t*)uc->uc_mcontext.gregs[15/*REG_SP*/],
+                   (address)uc->uc_mcontext.psw.addr);
+  return true;
+}
+
 // Forte Analyzer AsyncGetCallTrace profiling support is not implemented on Linux/S390x.
 bool JavaThread::pd_get_top_frame_for_signal_handler(frame* fr_addr, void* ucontext, bool isInJava) {
   Unimplemented();
