src/hotspot/os_cpu/linux_s390/thread_linux_s390.hpp
@@ -48,4 +48,6 @@
 
   bool pd_get_top_frame_for_signal_handler(frame* fr_addr, void* ucontext, bool isInJava);
 
+  bool pd_get_top_frame_for_profiling(frame* fr_addr, void* ucontext, bool isInJava);
+
 #endif // OS_CPU_LINUX_S390_VM_THREAD_LINUX_S390_HPP
